微调给git ignore文件使得其暂时忽略模板文件夹的更改. 本地运行时先运行transf生成模板

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-# Excel temp file
+\# Excel temp file
 ~$*
+
+# FSM file, optional.
+templates
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
